# langchain-academy

./: pyproject.toml
module-0/: basics.ipynb
module-1/: 1-simple-graph.ipynb  2-chain.ipynb  3-router.ipynb  4-agent.ipynb  5-agent-memory.ipynb
module-1/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
module-2/: 1-state-schema.ipynb  2-state-reducers.ipynb  3-multiple-schemas.ipynb  4-trim-filter-messages.ipynb  5-chatbot-summarization.ipynb  6-chatbot-external-memory.ipynb
module-2/state_db/: example.db-shm  example.db-wal
module-2/studio/.langgraph_api/: .langgraph_ops.pckl
module-3/: 1-streaming-interruption.ipynb
