[project]
name = "langchain-academy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.22",
    "langchain-core>=0.3.56",
    "langchain-openai>=0.3.14",
    "langgraph>=0.3.34",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langgraph-cli[inmem]>=0.2.7",
    "langgraph-prebuilt>=0.1.8",
    "langgraph-sdk>=0.1.63",
    "langsmith>=0.3.34",
    "notebook>=7.4.1",
    "tavily-python>=0.7.0",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
